# Vox-Voice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Project_Scope.md  README.md  inspect_cosmic.py  pyproject.toml  requirements.txt  test_llm_skill.py
backend/voice-engine/: pyproject.toml
backend/voice-engine/config/: default.json  gemini_voice_rules.md
backend/voice-engine/runs/2026-02-24/01KJ794Y7X81C3WPSY34YC6E6M/: manifest.json
backend/voice-engine/runs/2026-02-24/01KJ7BYNPQPW6FVS11MVRE3RBK/: manifest.json  trace.json
backend/voice-engine/src/voice_engine/: bus.py  cli.py  config.py  engine.py  events.py  gateway.py  live.py  runs.py  trace.py
backend/voice-engine/src/voice_engine/audio/: pipeline.py  vad.py
backend/voice-engine/src/voice_engine/llm/: __init__.py  base.py  gemini_cli.py  ollama.py
backend/voice-engine/src/voice_engine/stt/: base.py  faster_whisper.py
backend/voice-engine/src/voice_engine/tts/: base.py  f5_tts.py
docs/: README.md
prompts/: README.md  gemini_install_and_test.md
scripts/: bootstrap_linux.sh  download_models.sh  download_qwen3.sh  download_sota_mega.sh  fix_kokoro_voices.py  generate_all_samples.py  generate_german_xtts.py  generate_samples.py  generate_samples_file.py  generate_samples_v2.py  install_voice.sh  scan_audio.py  setup_gemini_override.sh  start_debug.sh  test_kokoro_official.py  test_parler.py  test_stt.py  test_tts.py  test_xtts.py  test_xtts_new.py  validate_basics.sh
tests/: test_audio_diagnostics.py  test_audio_hardened.py  test_cli_vad.py  test_config.py  test_defaults.py  test_full_pipeline.py  (+19 more)
(+77 files in other folders)
